<resources>
    <string name="app_name">Demos Laundry</string>
    <string name="welcome">Welcome</string>
    <string name="back">Back</string>
    <string name="washiron">Wash/Iron</string>
    <string name="dryclean">Dry Clean</string>
    <string name="washfold">Wash/Fold</string>
    <string name="iron">Ironing</string>
    <string name="what_you_want_us_to_do">What You Want Us To Do..</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ordersummary">ordersummary</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>