<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/home"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:maxLines="1"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeMaxTextSize="26sp"
        android:autoSizeTextType="uniform"
        android:text="@string/what_you_want_us_to_do"
        android:textColor="#0083FF"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/selectorstyle"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/shopping_ca"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="false"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="45dp"
            android:layout_marginRight="30dp"

            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="108dp"
            android:autoSizeMaxTextSize="34sp"
            android:autoSizeMinTextSize="18sp"
            android:autoSizeTextType="uniform"
            android:gravity="top"
            android:text="@string/welcome"
            android:textAppearance="@style/welcome" />

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="18sp"
            android:autoSizeMaxTextSize="34sp"
            android:layout_marginTop="148dp"
            android:layout_marginBottom="30dp"
            android:text="@string/back"
            android:textAppearance="@style/back" />

    </RelativeLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:dividerPadding="10dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/washironcard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_margin="10dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="20dp"
                app:contentPadding="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|top"
                    android:layout_marginBottom="40dp"
                    android:src="@drawable/washing_mac" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:textAlignment="center"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/washiron"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMinTextSize="12sp"
                    android:autoSizeMaxTextSize="18sp"
                    android:maxLines="1"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/drycleancard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_margin="10dp"
                android:background="#FFFFFF"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="20dp"
                app:contentPadding="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="40dp"
                    android:src="@drawable/dryclean" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/dryclean"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeMaxTextSize="18sp"
                    android:textColor="#000000"
                    android:textSize="17sp" />
            </androidx.cardview.widget.CardView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/washfoldcard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_margin="10dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="20dp"
                app:contentPadding="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="40dp"
                    android:src="@drawable/fold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/washfold"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeMaxTextSize="18sp"
                    android:textColor="#000000"
                    android:textSize="17sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/ironcard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="20dp"
                app:contentPadding="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="40dp"
                    android:src="@drawable/iron" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeMaxTextSize="18sp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/iron"
                    android:textColor="#000000"
                    android:textSize="17sp" />
            </androidx.cardview.widget.CardView>
        </TableRow>

    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>